Fix layout rendering of Visualization #2 on mobile
It appears that the specification of viewBox in the svg specification
to render the navigation map properly was causing issues with the
rendering of the bar graph.

Removed it and positioned the navigation map in a more artifical manner
using proportional offsets based on the width of the container being
rendered on the device.

--- a/css/activity-map.css
+++ b/css/activity-map.css
@@ -70,9 +70,25 @@ div#tx-indent {
   fill: #4b79b4; /* lightsteelblue family */
 }
 
-.axis {
-  font-size: 14px;
+@media (max-width: 350px) {
+  .axis {
+    font-size: 10px;
+  }
+  .labels-x {
+    font-size: 9px;
+  }
 }
+
+@media (min-width: 355px) {
+  .axis {
+    font-size: 14px;
+  }
+  .labels-x {
+    font-size: 14px;
+  }
+}
+
+
 .axis path,
 .axis line {
   stroke: #000;
